2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: Track
	  API. Emit regions for members.

	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Use body regions to select body or place caret, and to
	  remove generated body when GenerateBody is false.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: Fix
	  property getter in overrides.

2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/ConsoleProject.xpt.xml: Set the external console
	  flag for console projects.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
	  API changes.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Fixed LINQ resolve error.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: handled other case
	  of unresolveable types.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: make it clearer
	  that the type can't be resolved.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Handled
	  unresolved return types

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Corrected base call.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Corrected type name output.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Removed some code duplication.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj: